@@ -17,6 +17,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -95,7 +96,7 @@ public class NLPProcessor {
                 net.shasankp000.Overlay.NLPDownloadProgressManager.updateProgress("Downloading BERT NLP model...", currentStepNum);
                 LOGGER.info("📥 BERT NLP model not found — downloading for first-time setup...");
 
-                try (InputStream in = new URL(bertModelURL).openStream()) {
+                try (InputStream in = URI.create(bertModelURL).toURL().openStream()) {
                     Files.copy(in, torchZipFile, StandardCopyOption.REPLACE_EXISTING);
                 }
 
@@ -112,7 +113,7 @@ public class NLPProcessor {
 
                         Files.deleteIfExists(torchZipFile);
 
-                        try (InputStream in = new URL(bertModelURL).openStream()) {
+                        try (InputStream in = URI.create(bertModelURL).toURL().openStream()) {
                             Files.copy(in, torchZipFile, StandardCopyOption.REPLACE_EXISTING);
                         }
 
@@ -154,7 +155,7 @@ public class NLPProcessor {
                 net.shasankp000.Overlay.NLPDownloadProgressManager.updateProgress("Downloading CART NLP model...", currentStepNum);
                 LOGGER.info("📥 CART NLP model not found — downloading for first-time setup...");
 
-                try (InputStream in = new URL(cartZipURL).openStream()) {
+                try (InputStream in = URI.create(cartZipURL).toURL().openStream()) {
                     Files.copy(in, cartZipFile, StandardCopyOption.REPLACE_EXISTING);
                 }
 
@@ -174,7 +175,7 @@ public class NLPProcessor {
 
                         Files.deleteIfExists(cartZipFile);
 
-                        try (InputStream in = new URL(cartZipURL).openStream()) {
+                        try (InputStream in = URI.create(cartZipURL).toURL().openStream()) {
                             Files.copy(in, cartZipFile, StandardCopyOption.REPLACE_EXISTING);
                         }
 
@@ -214,7 +215,7 @@ public class NLPProcessor {
                     String expectedSha512 = entry.getValue();
 
                     try {
-                        URL url = new URL(modelURL);
+                        URL url = URI.create(modelURL).toURL();
                         String fileName = Paths.get(url.getPath()).getFileName().toString();
 
                         Path targetFilePath = openNlpModelsDir.resolve(fileName);
@@ -249,7 +250,7 @@ public class NLPProcessor {
                 net.shasankp000.Overlay.NLPDownloadProgressManager.updateProgress("Downloading LIDSNet model...", currentStepNum);
                 LOGGER.info("📥 LIDSNet NLP model not found — downloading for first-time setup...");
 
-                try (InputStream in = new URL(LIDSNetModelURL).openStream()) {
+                try (InputStream in = URI.create(LIDSNetModelURL).toURL().openStream()) {
                     Files.copy(in, LidsNETZipFile, StandardCopyOption.REPLACE_EXISTING);
                 }
 
@@ -266,7 +267,7 @@ public class NLPProcessor {
 
                         Files.deleteIfExists(LidsNETZipFile);
 
-                        try (InputStream in = new URL(LIDSNetModelURL).openStream()) {
+                        try (InputStream in = URI.create(LIDSNetModelURL).toURL().openStream()) {
                             Files.copy(in, LidsNETZipFile, StandardCopyOption.REPLACE_EXISTING);
                         }
 
